# cake-back

./: .gitignore  README.md  pyproject.toml
cake/: admin.py  models.py  serializers.py  views.py
cake/migrations/: 0001_initial.py  0002_initial.py  0003_rename_visitors_usercake_visitor_and_more.py
cakes/: admin.py  models.py  serializers.py  urls.py  views.py
cakes/migrations/: 0001_initial.py  0002_initial.py  0003_remove_cakebase_visitor_name_and_more.py  0004_remove_cakebase_letter_count.py  0005_cakebase_letter_count.py  0006_remove_cakebase_letter_count.py  0007_cakebase_visitor_name_cakebase_visitor_password.py
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
visitors/: admin.py  models.py  serializers.py  urls.py  views.py
visitors/migrations/: 0001_initial.py
